# rusty-scv

./: .gitignore  Cargo.toml  README.md  rust_foundation.txt  rust_rewrite_plan.md  test_time_format.rs
docs/: mvp.md  project-progress.md
src/: main.rs
src/app/: config.rs  events.rs  mod.rs  state.rs
src/data/: database.rs  github.rs  mod.rs  models.rs
src/git/: mod.rs
src/ui/: animations.rs  layout.rs  mod.rs  themes.rs
src/ui/components/: confirmation_dialog.rs  dashboard.rs  input.rs  loading.rs  main_menu.rs  menu.rs  mod.rs
src/ui/screens/: add_students.rs  class_management.rs  class_selection.rs  create_class.rs  delete_student.rs  github_activity.rs  latest_activity.rs  main_menu.rs  mod.rs  repo_management.rs  student_management.rs  week_view.rs
src/utils/: mod.rs  terminal.rs
