[package]
name = "scv"
version = "0.1.0"
edition = "2021"
description = "Student Code Viewer - Beautiful terminal UI for managing student GitHub repositories"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4", features = ["derive", "env"] }
crossterm = "0.26"
ratatui = "0.21"
tokio = { version = "1.32", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
dirs = "4.0"
chrono = { version = "0.4.31", features = ["serde"] }
rusqlite = { version = "0.29", features = ["bundled", "chrono"] }
rand = "0.8.5"
log = "0.4"

[dev-dependencies]
tempfile = "3.8"